Fix Page Not scrolling On Mobile When Todos Don't Fit In The View

--- a/src/global.css
+++ b/src/global.css
@@ -9,14 +9,17 @@
     font-family: 'Montserrat';
 }
 
-body {
-    height: 100vh;
-    background-color: #eee;
+html {
+    height: 100%;
 }
 
-#app {
-    height: 100%;
+body {
+    min-height: 100%;
+    background-color: #eee;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+#app {
 }
